[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "toxicintegrations"
dynamic = ["version"]
authors = [
  { name="me@myself.com" },
]
description = "toxicintegrations: My super cool project"
readme = "README.md"

dependencies = [
    'toxiccore>=0.11.0',
    'toxiccommon>=0.10.0',
    'toxicnotifications>=0.10.0',
    # 'motor>=3.1.1',
    # 'blinker>=1.5',
    # 'pymongo>=4.3.3',
    # 'asyncblink>=0.3.2',
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'

]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "testdata*"]
include = ["toxicintegrations*"]

[tool.setuptools.dynamic]
version = {attr = "toxicintegrations.__version__"}